fixed overflow issue

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,6 +9,7 @@
     "navigation";
   padding: 1rem 2rem;
   gap: 1rem;
+  overflow: hidden;
 }
 
 .header {
