--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -9,7 +9,6 @@ body {
     var(--dark-gray-alt)
   );
   color: white;
-  overflow-x: hidden;
 }
 
 html {
